# ComfyUI_Isulion

./: .gitignore  CODE_OF_CONDUCT.md  Mega_Prompt_V2.py  README.md  __init__.py  isucollage_node.py  isulion_OllamaGenerate.py  isulion_animal_behavior_generator.py  isulion_animal_generator.py  isulion_art_style_generator.py  isulion_cute_animal_generator.py  isulion_emotion_generator.py  isulion_habitat_generator.py  isulion_model_selector.py  isulion_prompt_generator.py  isulion_time_of_day_generator.py  ixulion_ollamaModelSelect.py  load_images_node.py  mega_prompt_V3.py  mega_prompt_all_themes.py  mega_prompt_analysis.txt  pyproject.toml  requirements.txt  resource_monitor_node.py  shutdown_node.py
ComfyUI_Isulion/: isulion_prompt_generator.py
Core_Nodes/: CustomTextNode.py  Overlay_node.py  QrCode_Generator.py  __init__.py  display_image_from_url.py  isulion_OllamaGenerate.py  isulion_prompt_generator.py  mega_prompt_V3.py  mega_prompt_all_themes.py  mega_prompt_generator.py  multisulion_mega_prompt_generator.py  shutdown_node.py  video_prompt_generator.py
Docs/: Theme_Creation_Guide.md  categorized_themes.txt  mega_prompt_analysis.txt
Workflows/: All_Isulion_Nodes_Workflow.json  Full_Flux_Megaprompt_v3.workflow.json  Isulion_Civitai_Nodes_Workflow.json  Multiple Mega Prompt.json
character_nodes/: isulion_clothing_generator.py  isulion_epoch_generator.py  isulion_fantasy_race_generator.py  isulion_profession_generator.py
configs/: abstract_config.json  animation_cartoon_config.json  anime_config.json  architectural_config.json  binet_surreal_config.json  (+52 more)
(+250 files in other folders)
