[project]
name = "comfyui_isulion"
description = "ComfyUI Nodes that generate prompts with the help of LLM from local or remote Ollama."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Isulion/ComfyUI_Isulion"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_Isulion"
Icon = ""
