[project]
name = "comfyui_isulion"
description = "ComfyUI Nodes that generate prompts and many more"
version = "5.1.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Isulion/ComfyUI_Isulion"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "isulion"
DisplayName = "ComfyUI_Isulion"
Icon = ""
